projects/core/components/root/root.style.less
@import '@taiga-ui/core/styles/taiga-ui-local';

// Required by some Taiga UI components
@keyframes tuiPresent {
    to {
        content: '1';
    }
}

@keyframes tuiSkeletonVibe {
    to {
        opacity: 0.5;
    }
}

html,
.tui-zero-scrollbar {
    .scrollbar-hidden();
}

body[data-tui-theme] {
    .text-basic();
    background: var(--tui-base-01);
    margin: 0;
}

tui-root {
    position: relative;
    display: block;
    flex: 1;
    -webkit-tap-highlight-color: transparent;
}

tui-root > .t-root-scrollbar {
    .fullsize(fixed, inset);
    margin: 0;
}

.t-root-content {
    height: 100%;
    isolation: isolate;
}

.t-overscroll-none {
    overscroll-behavior: none;
}

